--- a/css/style.css
+++ b/css/style.css
@@ -1165,7 +1165,7 @@ body.dark-theme {
 /* Стили для страницы услуг */
         .services-hero {
             height: 50vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1580587771525-78b9dba3b914?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://i.pinimg.com/736x/02/d5/ca/02d5cadb69e8eadcd240762f7db6b35b.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
