--- a/css/style.css
+++ b/css/style.css
@@ -1483,7 +1483,7 @@ body.dark-theme {
 /* Стили для страницы материалов */
         .materials-hero {
             height: 60vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1580587771525-78b9dba3b914?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://i.pinimg.com/736x/0f/92/c5/0f92c5f1ee2bce5d0ee792415b6ef6eb.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
