--- a/css/style.css
+++ b/css/style.css
@@ -1770,7 +1770,7 @@ body.dark-theme {
 /* Дополнительные стили для страницы проектов */
         .projects-hero {
             height: 50vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://i.pinimg.com/1200x/e8/64/93/e864930d8e572f041870293ba9e052c6.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
