--- a/css/style.css
+++ b/css/style.css
@@ -744,7 +744,7 @@ body.dark-theme {
 /* About Page Styles */
 .about-hero {
     height: 60vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1605276374104-dee2a0ed3cd6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://i.pinimg.com/1200x/9e/47/cb/9e47cb699e37288fa745f2868f40a0e8.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
