--- a/css/services.css
+++ b/css/services.css
@@ -28,6 +28,11 @@
     background-color: #f9f9f9;
 }
 
+.section-title {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
 .services-grid {
     display: grid;
     grid-template-columns: 1fr;
