--- a/css/terrace.css
+++ b/css/terrace.css
@@ -1,4 +1,4 @@
-/* Стили для страницы террас */
+/* Стили для страницы террасных покрытий */
 .terrace-hero {
     height: 60vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://i.pinimg.com/1200x/9e/47/cb/9e47cb699e37288fa745f2868f40a0e8.jpg');
